# encrypt-in-browser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  app.js  index.html  package-lock.json  package.json
example/: index.html
src/: lib.rs
