[package]
name = "encrypt-message"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # For Wasm compatibility

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
sequoia-openpgp = { version = "*", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto", "compression-deflate"] }